# omniprobe

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-triton-llvm.yml  build-triton-redhat.yml  build-triton-ubuntu.yml  redhat.yml  ubuntu-jammy-rocm.yml  ubuntu-jammy-triton.yml  ubuntu.yml
cmake_modules/: env.cmake  ext_proj_add.cmake  fetch.cmake  utils.cmake
containers/: build.sh  omniprobe.Dockerfile  omniprobe.def  run.sh  triton_install.sh
docker/: build.sh  logduration.Dockerfile  logduration.def
inc/: basic_block_analysis.h  codeUtils.h  comms_mgr.h  config_receiver.h  hsa_mem_mgr.h  interceptor.h  json_helpers.h  kernelDB.h  memory_analysis_handler.h  memory_analysis_wrapper.h  memory_heatmap.h  memory_heatmap_wrapper.h  message_logger.h  pyHandler.h  time_interval_handler.h  time_interval_handler_wrapper.h  utils.h
omniprobe/: do_triton.sh  omniprobe
omniprobe/config/: analytics.py  triton_config.py
omniprobe/triton/: .gitignore
plugins/: CMakeLists.txt  basic_block_plugin.cc  logger_plugin.cc  memory_analysis_plugin.cc  plugin.cc  plugin.h
src/: CMakeLists.txt  basic_block_analysis.cc  codeUtils.cc  comms_mgr.cc  config_receiver.cc  hsa_mem_mgr.cc  interceptor.cc  json_helpers.cc  kernelDB.cc  memory_analysis_handler.cc  memory_analysis_wrapper.cc  memory_heatmap.cc  memory_heatmap_wrapper.cc  message_logger.cc  pyHandler.cc  reconfigure.cc  time_interval_handler.cc  time_interval_handler_wrapper.cc  timehelper.h  utils.cc
src/test/: bank_conflicts.cc  heatmap_example.cc  quicktest.cc  st.sh  stresstest.cc  uncoalesced_access.cc
src/test_kernels/: copy.cl
test_code/: cm.sh  d.sh  hip_test.cc  ht.sh  test.cc
